<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Region -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/regions"
            android:prompt="@string/select_region" />

        <!-- Car Type -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spCarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/car_types"
            android:prompt="@string/select_car_type" />

        <!-- Gear Type -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spGearType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gear_types"
            android:prompt="@string/select_gear_type" />

        <!-- Fuel Type -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spFuelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fuel_types"
            android:prompt="@string/select_fuel_type" />

        <!-- Color -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/colors"
            android:prompt="@string/select_color" />

        <!-- Doors -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spDoors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/doors_count"
            android:prompt="@string/select_doors" />

        <!-- Seats -->
        <Spinner
            android:textSize="18sp"
            android:id="@+id/spSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/seats_count"
            android:prompt="@string/select_seats" />

        <!-- Test Date -->
        <EditText
            android:textSize="18sp"
            android:inputType="date"
            android:id="@+id/etTestDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Test Date (YYYY-MM-DD)" />

        <!-- Price Range -->
        <EditText
            android:textSize="18sp"
            android:inputType="number"
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price" />

        <!-- Year -->
        <EditText
            android:textSize="18sp"
            android:inputType="number"
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Year" />

        <!-- Horse Power -->
        <EditText
            android:textSize="18sp"
            android:inputType="number"
            android:id="@+id/etHorsePower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Horse Power" />

        <!-- Engine Capacity -->
        <EditText
            android:textSize="18sp"
            android:inputType="number"
            android:id="@+id/etEngineCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Engine Capacity" />

        <!-- Sunroof -->
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/cbSunroof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sunroof" />

        <!-- Two Seater -->
        <CheckBox
            android:textSize="18sp"
            android:id="@+id/cbDisabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Disabled Accessible" />

        <!-- Apply Images -->
        <Button
            android:backgroundTint="#a9f2fd"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:id="@+id/btnAddCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add 5 images"
            android:layout_marginTop="16dp" />

        <!-- Apply Button -->
        <Button
            android:backgroundTint="#a9f2fd"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:id="@+id/btnApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apply Filter"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#dbf2ff"
        app:menu="@menu/my_menu"
        android:id="@+id/bottom_navigation"
        app:labelVisibilityMode="labeled"
        app:itemPaddingTop="17dp"
        />

</RelativeLayout>
